добавлено офоормление формул latex

--- a/NetworkScienceBarabasi/10.md
+++ b/NetworkScienceBarabasi/10.md
@@ -7,23 +7,23 @@
 1. **Суперраспространители**  
    - Индивидуумы, отвечающие за непропорционально большое число заражений  
    - Яркий пример — врач из провинции Гуандун, занёсший SARS в Гонконг  
-   - В терминах сетей: суперраспространители \(\rightarrow\) узлы с высокой степенью (hubs)
+   - В терминах сетей: суперраспространители $\rightarrow$ узлы с высокой степенью (hubs)
 
 2. **Классические эпидемические модели (SI, SIS, SIR)**  
    - **SI**: инфицированные не выздоравливают, все в итоге заражаются  
    - **SIS**: инфицированные выздоравливают и вновь становятся восприимчивыми  
    - **SIR**: после выздоровления человек становится невосприимчивым (иммунитет)  
 
-3. **Базовое воспроизводящее число \( R_0 \)**  
-   - \( R_0 = \dfrac{\beta \langle k \rangle}{\mu} \)  
+3. **Базовое воспроизводящее число $ R_0 $**  
+   - $ R_0 = \dfrac{\beta \langle k \rangle}{\mu} $  
    - Определяет судьбу патогена:  
-     - \( R_0 > 1 \) \(\rightarrow\) инфекция распространяется  
-     - \( R_0 < 1 \) \(\rightarrow\) инфекция угасает
+     - $ R_0 > 1 $ $\rightarrow$ инфекция распространяется  
+     - $ R_0 < 1 $ $\rightarrow$ инфекция угасает
 
 4. **Сетевой подход к эпидемиям**  
-   - Топология контактов (кто с кем взаимодействует) важнее простого среднего \(\langle k \rangle\)  
-   - Широкое распределение степеней (scale-free) \(\rightarrow\) «хабы» существенно влияют на скорость и устойчивость инфекции  
-   - В сетях без характерной степени (\(\gamma \leq 3\)) эпидемический порог \(\lambda_c \rightarrow 0\); даже слабая инфекция способна укорениться
+   - Топология контактов (кто с кем взаимодействует) важнее простого среднего $\langle k \rangle$  
+   - Широкое распределение степеней (scale-free) $\rightarrow$ «хабы» существенно влияют на скорость и устойчивость инфекции  
+   - В сетях без характерной степени ($\gamma \leq 3$) эпидемический порог $\lambda_c \rightarrow 0$; даже слабая инфекция способна укорениться
 
 5. **Факторы, влияющие на распространение**  
    - **Временная структура контактов** (burstiness)  
@@ -32,19 +32,19 @@
 
 6. **Иммунизация и стратегии борьбы**  
    - **Случайная вакцинация**: эффективна при узком распределении степеней (случайная сеть), требует охвата почти всего населения в случае масштабных гетерогенных сетей  
-   - **Таргетированная (селективная) иммунизация**: фокус на «хабы» или на соседей случайных узлов \(\rightarrow\) резко увеличивает порог и помогает остановить инфекцию  
+   - **Таргетированная (селективная) иммунизация**: фокус на «хабы» или на соседей случайных узлов $\rightarrow$ резко увеличивает порог и помогает остановить инфекцию  
    - Аналогия с устойчивостью сетей к атакам (CHAPTER 8): удаление хабов фрагментирует сеть
 
 7. **Реальные примеры и прогнозы**  
-   - **H1N1, SARS, Эбола** \(\rightarrow\) глобальная мобильность ускоряет заражение  
+   - **H1N1, SARS, Эбола** $\rightarrow$ глобальная мобильность ускоряет заражение  
    - **GLEAM-модель**: компьютерное моделирование с учётом авиа- и транспортных потоков, демографии  
-   - **Эффективное расстояние** вместо географического \(\rightarrow\) радиальные «волны» в пространстве перелётов  
+   - **Эффективное расстояние** вместо географического $\rightarrow$ радиальные «волны» в пространстве перелётов  
    - Ограничение путешествий в масштабах 40–90% даёт лишь отложенный на дни/недели пик, но не уменьшает общее число заражений  
 
 8. **Применение за пределами медицины**  
    - Компьютерные вирусы (распространение через email, Bluetooth, MMS)  
    - Распространение слухов, идей, продуктов (simple vs. complex contagion)  
-   - Ожирение, социальные патологии \(\rightarrow\) социальный «контакт» ведёт к «заражению» поведением
+   - Ожирение, социальные патологии $\rightarrow$ социальный «контакт» ведёт к «заражению» поведением
 
 ---
 
@@ -56,13 +56,13 @@
 
 2. **SI, SIS, SIR**  
    - Математические уравнения описывают рост числа инфицированных  
-   - \( \text{SI}: \frac{dI}{dt} = \beta \langle k \rangle I(1 - I) \) \(\rightarrow\) все инфицируются  
-   - \( \text{SIS}: \text{есть порог } \lambda_c = \frac{\langle k \rangle}{\langle k^2 \rangle}\)  
-   - \( \text{SIR}: \text{узлы не возвращаются в S-состояние}\)
+   - $ \text{SI}: \frac{dI}{dt} = \beta \langle k \rangle I(1 - I) $ $\rightarrow$ все инфицируются  
+   - $ \text{SIS}: \text{есть порог } \lambda_c = \frac{\langle k \rangle}{\langle k^2 \rangle}$  
+   - $ \text{SIR}: \text{узлы не возвращаются в S-состояние}$
 
 3. **Сетевой эпидемический порог**  
-   - В случайных сетях \(\lambda_c \sim 1 / \langle k \rangle\)  
-   - В scale-free сетях с \(\gamma \le 3\) \(\rightarrow\) \(\lambda_c \approx 0\): инфекция не затухает автоматически
+   - В случайных сетях $\lambda_c \sim 1 / \langle k \rangle$  
+   - В scale-free сетях с $\gamma \le 3$ $\rightarrow$ $\lambda_c \approx 0$: инфекция не затухает автоматически
 
 4. **Реальные контактные сети**  
    - **Сексуальная сеть** (распространение ВИЧ/СПИД): степенное распределение, некоторые имеют очень много партнёров  
@@ -71,13 +71,13 @@
    - Множество примеров в цифровых системах (email, мобильные сети)
 
 5. **Роль весов и сообществ**  
-   - Сильные связи внутри одной группы \(\rightarrow\) быстрое «локальное» заражение  
+   - Сильные связи внутри одной группы $\rightarrow$ быстрое «локальное» заражение  
    - Слабые связи между группами задерживают распространение (trapping effect)  
    - Социальное подкрепление (complex contagion) может работать наоборот: именно слабые связи ограничивают выход «новинки» из одной группы
 
 6. **Иммунизация**  
    - **Случайная** (random): хороша при узком распределении, но неэффективна в scale-free  
-   - **Таргетированная** (targeted): убрать хабы, \(\rightarrow\) \(\langle k^2 \rangle\) падает, \(\lambda_c\) повышается  
+   - **Таргетированная** (targeted): убрать хабы, $\rightarrow$ $\langle k^2 \rangle$ падает, $\lambda_c$ повышается  
    - **Иммунизация соседа**: «эффект парадокса друзей» — помогает находить высокостепенные узлы без знания всей сети  
    - Примеры: вакцинация в очагах эпидемии (против оспы), обязателен учёт глобальных перелётов
 
@@ -88,7 +88,7 @@
    - Показали ограниченные эффекты строгих карантинных мер или больших сокращений путешествий
 
 8. **Эффективное расстояние**  
-   - Вместо километров учитывается «шанс» переезда \((p_{ij})\): \(\displaystyle d_{ij} = 1 - \ln p_{ij}\)  
+   - Вместо километров учитывается «шанс» переезда $(p_{ij})$: $\displaystyle d_{ij} = 1 - \ln p_{ij}$  
    - Распространение похоже на круговую волну в пространстве эффективных расстояний
 
 ---
@@ -104,8 +104,8 @@
 ## 4. Контрольные вопросы
 
 1. Чем сетевой подход к эпидемиям принципиально отличается от классической гипотезы однородного смешивания?  
-2. Зачем необходимо анализировать \(\langle k^2 \rangle\) (второй момент распределения степеней) в эпидемиологических моделях?  
-3. Почему в scale-free сетях (с низким \(\gamma\)) эпидемический порог \(\lambda_c \rightarrow 0\)?  
+2. Зачем необходимо анализировать $\langle k^2 \rangle$ (второй момент распределения степеней) в эпидемиологических моделях?  
+3. Почему в scale-free сетях (с низким $\gamma$) эпидемический порог $\lambda_c \rightarrow 0$?  
 4. В чём суть таргетированной иммунизации и почему она более эффективна?  
 5. Какова роль временных (burst) паттернов контактов в процессе распространения?  
 6. Как «эффективное расстояние» помогает лучше предсказать географическое распространение заболевания, чем обычное расстояние в километрах?
