--- a/NetworkScienceBarabasi/3.md
+++ b/NetworkScienceBarabasi/3.md
@@ -4,7 +4,7 @@
 
 1. **Сценарий вечеринки**  
 2. **Случайная сеть (модель Эрдёша–Реньи, ER-модель)**  
-3. **Критическое значение \(\langle k\rangle = 1\)**  
+3. **Критическое значение $\langle k\rangle = 1$**  
 4. **Степенное (биномиальное/пуассоновское) распределение**  
 5. **Средняя длина пути и малый мир**  
 6. **Коэффициент кластеризации (Clustering)**  
@@ -28,42 +28,42 @@
 - Модель случайной сети (Random Network, RN) зародилась как математическая идея у Эрдёша и Реньи, а параллельно — у Гилберта.  
 
 **3. Определение и основные свойства случайной сети (ER-модель):**  
-- **G(N, p):** у нас есть $N$ узлов, каждая пара соединяется с вероятностью \(p\).  
-- **G(N, L):** фиксировано число рёбер \(L\), распределённых случайным образом.  
-- **Средняя степень** \(\langle k\rangle = p(N-1)\).  
-- **Среднее число рёбер** \(\langle L\rangle = \frac{p\,N(N-1)}{2}\).  
+- $G(N, p)$: у нас есть $N$ узлов, каждая пара соединяется с вероятностью $p$.  
+- $G(N, L)$: фиксировано число рёбер $L$, распределённых случайным образом.  
+- **Средняя степень** $\langle k\rangle = p(N-1)$.  
+- **Среднее число рёбер** $\langle L\rangle = \frac{p\,N(N-1)}{2}$.  
 
 **4. Степень узлов и распределение степеней:**  
-- В ER-модели распределение степеней биномиально. При \(\langle k\rangle \ll N\) хорошо приближается пуассоновским распределением:  
-  \[
+- В ER-модели распределение степеней биномиально. При $\langle k\rangle \ll N$ хорошо приближается пуассоновским распределением:  
+  $$
   p_k = \frac{e^{-\langle k\rangle}\,\langle k\rangle^k}{k!}.
-  \]  
+  $$  
 - Вывод: узлы имеют близкие друг к другу степени; «суперузлы» (hubs) практически не встречаются.  
 
 **5. Свойства случайных сетей: связность и гигантская компонента**  
-- Если \(\langle k\rangle < 1\), сеть разбита на множество мелких компонент.  
-- **Критический порог** \(\langle k\rangle = 1\): формирование гигантской компоненты.  
-- Если \(\langle k\rangle > \ln(N)\), сеть становится связной (все узлы в одной компоненте).  
+- Если $\langle k\rangle < 1$, сеть разбита на множество мелких компонент.  
+- **Критический порог** $\langle k\rangle = 1$: формирование гигантской компоненты.  
+- Если $\langle k\rangle > \ln(N)$, сеть становится связной (все узлы в одной компоненте).  
 
 **6. Малый мир (small-world phenomenon):**  
 - **Шесть рукопожатий** (пример из социологии): люди на Земле в среднем связаны через короткие цепочки.  
-- В случайной сети средняя длина пути \(\langle d\rangle \approx \frac{\ln(N)}{\ln(\langle k\rangle)}\).  
+- В случайной сети средняя длина пути $\langle d\rangle \approx \frac{\ln(N)}{\ln(\langle k\rangle)}$.  
   - Это даёт «логарифмическую» зависимость и объясняет «малый мир».  
 
-**7. Коэффициент кластеризации \(C\):**  
-- Для ER-сети \(C \approx p = \frac{\langle k\rangle}{N}\), что убывает при росте \(N\).  
-- В реальных сетях кластеризация обычно выше и не спадает как \(1/N\).  
-- Кроме того, в реальности \(C(k)\) часто убывает с ростом степени узла, чего ER-модель не воспроизводит.  
+**7. Коэффициент кластеризации $C$:**  
+- Для ER-сети $C \approx p = \frac{\langle k\rangle}{N}$, что убывает при росте $N$.  
+- В реальных сетях кластеризация обычно выше и не спадает как $1/N$.  
+- Кроме того, в реальности $C(k)$ часто убывает с ростом степени узла, чего ER-модель не воспроизводит.  
 
 **8. Недостатки ER-модели для реальных сетей:**  
 - **Не объясняет наличие узлов с очень высокой степенью** (hubs).  
-- **Предсказывает фрагментацию** (при \(\langle k\rangle < \ln(N)\)), хотя в реальности многие сети полностью связны.  
+- **Предсказывает фрагментацию** (при $\langle k\rangle < \ln(N)$), хотя в реальности многие сети полностью связны.  
 - Кластеризация слишком низкая и не зависит от степени.  
 
 **9. Модель Уоттса–Строгатца (WS-модель):**  
 - Пытается совместить высокую кластеризацию с эффектом малого мира.  
-- Начинает с кольца (регулярная структура) и «перематывает» (rewiring) некоторые рёбра с вероятностью \(p\).  
-- Получает короткие пути (малый мир) и более высокий \(C\), чем в чисто случайных сетях.  
+- Начинает с кольца (регулярная структура) и «перематывает» (rewiring) некоторые рёбра с вероятностью $p$.  
+- Получает короткие пути (малый мир) и более высокий $C$, чем в чисто случайных сетях.  
 - Но по-прежнему отсутствуют узлы с аномально высокой степенью, характерные для многих реальных сетей.  
 
 **10. Почему важно изучать случайные сети:**  
@@ -76,7 +76,7 @@
 
 ### 3. Итоговое резюме / Рефлексия  
 
-Случайные сети (модель Эрдёша–Реньи) предоставляют мощный математический каркас для описания и анализа ряда ключевых свойств сетей: появление гигантской компоненты, эффект «малого мира» и т.д. Однако реальные сети демонстрируют свойства, не описываемые простой случайностью: высокие «хвосты» степенного распределения, большие узлы-хабы, неубывающая кластеризация с ростом \(N\). Поэтому хотя ER-модель и важна для теоретической базы, для описания реальных сетей требуются более сложные (например, масштабно-инварантные) и гибридные модели.  
+Случайные сети (модель Эрдёша–Реньи) предоставляют мощный математический каркас для описания и анализа ряда ключевых свойств сетей: появление гигантской компоненты, эффект «малого мира» и т.д. Однако реальные сети демонстрируют свойства, не описываемые простой случайностью: высокие «хвосты» степенного распределения, большие узлы-хабы, неубывающая кластеризация с ростом $N$. Поэтому хотя ER-модель и важна для теоретической базы, для описания реальных сетей требуются более сложные (например, масштабно-инварантные) и гибридные модели.  
 
 # Список литературы
 
