--- a/NetworkScienceBarabasi/4.md
+++ b/NetworkScienceBarabasi/4.md
@@ -63,7 +63,7 @@
    - Главное отличие: в безмасштабной сети высокий разброс степеней $\sigma \gg \langle k \rangle$.  
    - Хабы оказывают значительное влияние на структуру и динамику сети.  
    - Максимальная степень $k_{max}$ масштабируется с размером $N$ по закону:  
-     $$k_\max \sim N^{1/(\gamma - 1)}$$  
+     $$k_{max} \sim N^{1/(\gamma - 1)}$$  
      В случайных сетях $k_{max}$ растёт медленно (логарифмически).
 
 8. **Малый мир и «ультра-малый» мир**  
