--- a/NetworkScienceBarabasi/5.md
+++ b/NetworkScienceBarabasi/5.md
@@ -33,13 +33,13 @@
 
 | **Ключевые вопросы / Термины**                                   | **Основные идеи / Заметки**                                                                                                                                                                                         |
 |:---------------------------------------------------------------- |:----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| **Определение**                                                  | 1) Начинаем с \(m_0\) узлов.<br>2) При каждом шаге добавляется новый узел с \(m\) связями к уже существующим узлам.<br>3) Вероятность связаться с узлом \(i\) пропорциональна его степени \(k_i\).                                                        |
-| **Степенное распределение**                                      | Итоговое распределение степеней \(p(k) \sim k^{-3}\).                                                                                                                                                                |
+| **Определение**                                                  | 1) Начинаем с $m_0$ узлов.<br>2) При каждом шаге добавляется новый узел с $m$ связями к уже существующим узлам.<br>3) Вероятность связаться с узлом $i$ пропорциональна его степени $k_i$.                                                        |
+| **Степенное распределение**                                      | Итоговое распределение степеней $p(k) \sim k^{-3}$.                                                                                                                                                                |
 | **“Rich-gets-richer”**                                           | Принцип: узлы с большим числом связей получают ещё больше за счёт преференциального присоединения.                                                                                                                   |
 | **Степень узла (degree) со временем**                            | Со временем старые узлы становятся хабами, так как при каждом добавлении нового узла вероятность связаться с уже крупными хабами выше.                                                                               |
 | **Главный результат**                                            | Комбинация роста и преференциального присоединения приводит к безмасштабному (scale-free) распределению со степенным хвостом.                                                                                       |
 
-**Итоговое замечание раздела**: Модель BA демонстрирует, что даже простое правило «добавления по предпочтению к более связанным» при постоянном росте сети рождает степенной закон (\(\gamma = 3\)).
+**Итоговое замечание раздела**: Модель BA демонстрирует, что даже простое правило «добавления по предпочтению к более связанным» при постоянном росте сети рождает степенной закон ($\gamma = 3$).
 
 ---
 
@@ -47,8 +47,8 @@
 
 | **Ключевые вопросы / Термины**                                      | **Основные идеи / Заметки**                                                                                                            |
 |:------------------------------------------------------------------- |:---------------------------------------------------------------------------------------------------------------------------------------|
-| **Как меняется степень узла со временем?**                          | \(k_i(t)\) возрастает как \(t^{1/2}\). Чем раньше узел появился, тем выше его степень (преимущество “первопроходца”).                  |
-| **Скорость роста степени**                                          | Убывает со временем (\( \mathrm{d}k / \mathrm{d}t \sim t^{-1/2}\)), т. е. “старые” узлы растут быстрее, чем новые, но рост затухает.   |
+| **Как меняется степень узла со временем?**                          | $k_i(t)$ возрастает как $t^{1/2}$. Чем раньше узел появился, тем выше его степень (преимущество “первопроходца”).                  |
+| **Скорость роста степени**                                          | Убывает со временем  $ \frac{\mathrm{d}k}{\mathrm{d}t} \sim t^{-1/2} $ , т. е. “старые” узлы растут быстрее, чем новые, но рост затухает.   |
 | **Вывод**                                                           | Динамика степени описывает “богатеющий становится ещё богаче”, что и формирует хабы.                                                   |
 
 **Итоговое замечание раздела**: Степень узлов подчиняется степенной функции времени, причём “возраст” узла играет ключевую роль.
@@ -59,11 +59,11 @@
 
 | **Ключевые вопросы / Термины**           | **Основные идеи / Заметки**                                                                                                                                                    |
 |:---------------------------------------- |:---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| **Формула для \(p(k)\)**                 | \(\gamma = 3\) для классической BA-модели.                                                                                                                                                                           |
+| **Формула для $p(k)$**                 | $\gamma = 3$ для классической BA-модели.                                                                                                                                                                           |
 | **Стационарность распределения**         | Распределение не меняется во времени и не зависит от размеров сети — одна из причин, почему большие реальные сети часто имеют схожий степенной хвост вне зависимости от своего возраста и истории.                   |
-| **Математические уточнения**             | Точный вид: \( p(k) = \frac{2m(m+1)}{k(k+1)(k+2)} \approx k^{-3}\) при больших \(k\).                                                                                                                                  |
+| **Математические уточнения**             | Точный вид: $ p(k) = \frac{2m(m+1)}{k(k+1)(k+2)} \approx k^{-3}$ при больших $k$.                                                                                                                                  |
 
-**Итоговое замечание раздела**: BA-модель даёт универсальный результат: \(\gamma=3\). Это упрощённая картина, но она демонстрирует суть феномена: старые узлы становятся хабами, формируя степенной закон.
+**Итоговое замечание раздела**: BA-модель даёт универсальный результат: $\gamma=3$. Это упрощённая картина, но она демонстрирует суть феномена: старые узлы становятся хабами, формируя степенной закон.
 
 ---
 
@@ -81,10 +81,10 @@
 
 | **Ключевые вопросы / Термины**                            | **Основные идеи / Заметки**                                                                                                                                                                                                      |
 |:--------------------------------------------------------- |:---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| **Как обнаружить преференциальное присоединение?**        | Измеряют \(\Pi(k)\) или накопленную функцию \(\pi(k)\) на основе данных в моменты времени \(t\) и \(t + \Delta t\).                                                                                                              |
-| **Линейная зависимость \(\Pi(k) \sim k\)**                | Подтверждает гипотезу Барабаши–Альберта (гипотеза 2).                                                                                                                                                                            |
-| **Сублинейная и суперлинейная преференция**               | В некоторых сетях (соц. графы учёных, актёры) \(\alpha < 1\). В других (Интернет, цитирования) \(\alpha \approx 1\). Если \(\alpha > 1\), возникает «winner-takes-all».                                                                                                |
-| **Основной итог**                                         | Почти во всех изученных реальных сетях есть зависимость вероятности присоединения от \(k\). Но не всегда строго линейная, что ведёт к отклонениям от чистого степенного закона (например, в виде экспоненциального среза). |
+| **Как обнаружить преференциальное присоединение?**        | Измеряют $\Pi(k)$ или накопленную функцию $\pi(k)$ на основе данных в моменты времени $t$ и $t + \Delta t$.                                                                                                              |
+| **Линейная зависимость $\Pi(k) \sim k$**                | Подтверждает гипотезу Барабаши–Альберта (гипотеза 2).                                                                                                                                                                            |
+| **Сублинейная и суперлинейная преференция**               | В некоторых сетях (соц. графы учёных, актёры) $\alpha < 1$. В других (Интернет, цитирования) $\alpha \approx 1$. Если $\alpha > 1$, возникает «winner-takes-all».                                                                                                |
+| **Основной итог**                                         | Почти во всех изученных реальных сетях есть зависимость вероятности присоединения от $k$. Но не всегда строго линейная, что ведёт к отклонениям от чистого степенного закона (например, в виде экспоненциального среза). |
 
 ---
 
@@ -92,10 +92,10 @@
 
 | **Ключевые вопросы / Термины**                  | **Основные идеи / Заметки**                                                                                                                                                                                                     |
 |:----------------------------------------------- |:--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| **Сублинейная (\(\alpha < 1\))**               | Приводит к “стретч-экспоненциальному” распределению степеней, т. е. хабы меньше по размеру и менее многочисленны.                                                                                                                |
-| **Линейная (\(\alpha = 1\))**                   | Даёт классическую BA-модель и чистый степенной закон.                                                                                                                                                                           |
-| **Суперлинейная (\(\alpha > 1\))**              | Усиление эффекта “богатые богатеют”; возможно образование “суперхабов” и топология “звезда-спутники” (winner-takes-all).                                                                                                         |
-| **Практический вывод**                          | Природа конкретной сети (соц. или технологическая) может задавать степень “линейности” преференциального присоединения, и от этого сильно зависит итоговая форма \(p(k)\).                                                                                             |
+| **Сублинейная ($\alpha < 1$)**               | Приводит к “стретч-экспоненциальному” распределению степеней, т. е. хабы меньше по размеру и менее многочисленны.                                                                                                                |
+| **Линейная ($\alpha = 1$)**                   | Даёт классическую BA-модель и чистый степенной закон.                                                                                                                                                                           |
+| **Суперлинейная ($\alpha > 1$)**              | Усиление эффекта “богатые богатеют”; возможно образование “суперхабов” и топология “звезда-спутники” (winner-takes-all).                                                                                                         |
+| **Практический вывод**                          | Природа конкретной сети (соц. или технологическая) может задавать степень “линейности” преференциального присоединения, и от этого сильно зависит итоговая форма $p(k)$.                                                                                             |
 
 ---
 
@@ -103,9 +103,9 @@
 
 | **Ключевые вопросы / Термины**                                    | **Основные идеи / Заметки**                                                                                                                                                                                                              |
 |:----------------------------------------------------------------- |:-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| **Локальные (случайные) механизмы**                              | *Link Selection Model*: новый узел случайно выбирает ребро в сети, присоединяется к одному из его концов. Приводит к \(\Pi(k) \sim k\).<br>*Copying Model*: копирование ссылок из выбранного узла (например, в WWW или при цитировании).                                               |
+| **Локальные (случайные) механизмы**                              | *Link Selection Model*: новый узел случайно выбирает ребро в сети, присоединяется к одному из его концов. Приводит к $\Pi(k) \sim k$.<br>*Copying Model*: копирование ссылок из выбранного узла (например, в WWW или при цитировании).                                               |
 | **Глобальные (оптимизационные) механизмы**                        | Выбор узла с учётом нескольких критериев (например, расстояние или выгоды). Сеть эволюционирует к степенному закону, так как новые узлы стремятся к лучшей “эффективности” и часто выбирают более центральные узлы.                                                               |
-| **Итог**                                                          | Разнообразные механизмы (как рандомные, так и оптимизационные) в итоге порождают линейное \(\Pi(k)\). Как следствие, возникает безмасштабная структура.                                                                                                                         |
+| **Итог**                                                          | Разнообразные механизмы (как рандомные, так и оптимизационные) в итоге порождают линейное $\Pi(k)$. Как следствие, возникает безмасштабная структура.                                                                                                                         |
 
 ---
 
@@ -113,8 +113,8 @@
 
 | **Ключевые вопросы / Термины**          | **Основные идеи / Заметки**                                                                                                                                                                         |
 |:--------------------------------------- |:----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| **Диаметр сети**                        | В BA-модели \(\langle d \rangle \sim \frac{\ln N}{\ln \ln N}\). Растёт медленнее, чем в случайном графе (\(\ln N\)).                                                                                 |
-| **Коэффициент кластеризации \(\langle C\rangle\)** | В BA-модели \(\langle C\rangle \sim \frac{(\ln N)^2}{N}\). Выше, чем \(1/N\) из модели Эрдёша–Реньи, значит в BA-сетях наблюдается более высокий локальный кластеринг.                                |
+| **Диаметр сети**                        | В BA-модели $\langle d \rangle \sim \frac{\ln N}{\ln \ln N}$. Растёт медленнее, чем в случайном графе ($\ln N$).                                                                                 |
+| **Коэффициент кластеризации $\langle C\rangle$** | В BA-модели $\langle C\rangle \sim \frac{(\ln N)^2}{N}$. Выше, чем $1/N$ из модели Эрдёша–Реньи, значит в BA-сетях наблюдается более высокий локальный кластеринг.                                |
 
 ---
 
@@ -123,7 +123,7 @@
 | **Ключевые вопросы / Термины**                         | **Основные идеи / Заметки**                                                                                                                                                                                                                     |
 |:------------------------------------------------------ |:------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
 | **Главный урок BA-модели**                             | Структура сети неотделима от её эволюции. Чтобы понять топологию, нужно описать процесс её формирования (рост + преференциальное присоединение).                                                                                               |
-| **Ограничения BA-модели**                              | – Фиксированное значение \(\gamma = 3\), а в реальности \(\gamma\) может меняться (2–5).<br>– Не учитывает направленные связи (например, в WWW).<br>– Не отражает появление/удаление ссылок в процессе роста.<br>– Не различает узлы по внутренним свойствам. |
+| **Ограничения BA-модели**                              | – Фиксированное значение $\gamma = 3$, а в реальности $\gamma$ может меняться (2–5).<br>– Не учитывает направленные связи (например, в WWW).<br>– Не отражает появление/удаление ссылок в процессе роста.<br>– Не различает узлы по внутренним свойствам. |
 | **Модификации**                                         | В главе 6 и далее вводятся способы учёта дополнительных механизмов (направленность, удаление узлов/ссылок, внутренние атрибуты и т.д.).                                                                                                        |
 | **Заключительный вывод**                               | Во всех известных механизмах, приводящих к степенному закону, так или иначе реализуется «предпочтение» к более связанным узлам. BA-модель — минималистичная иллюстрация этого фундаментального принципа.                                                                              |
 
@@ -131,13 +131,11 @@
 
 ### КРАТКОЕ РЕЗЮМЕ (НИЖНЯЯ ЧАСТЬ ЛИСТА)
 
-В данной главе показано, что безмасштабные сети (scale-free) возникают из-за совместного действия **роста** сети и механизма **преференциального присоединения**, при котором новые узлы чаще подключаются к уже популярным (высокостепенным) узлам. Модель Барабаши–Альберт (BA) демонстрирует, что такая динамика приводит к степенному распределению со средним показателем \(\gamma = 3\). Однако реальные системы могут иметь нюансы: направленные связи, нелинейное предпочтение, удаление узлов и т.д. Именно поэтому чистая BA-модель служит базовой «доказательной» схемой, а дальнейшие расширения учитывают специфику конкретных реальных сетей.
+В данной главе показано, что безмасштабные сети (scale-free) возникают из-за совместного действия **роста** сети и механизма **преференциального присоединения**, при котором новые узлы чаще подключаются к уже популярным (высокостепенным) узлам. Модель Барабаши–Альберт (BA) демонстрирует, что такая динамика приводит к степенному распределению со средним показателем $\gamma = 3$. Однако реальные системы могут иметь нюансы: направленные связи, нелинейное предпочтение, удаление узлов и т.д. Именно поэтому чистая BA-модель служит базовой «доказательной» схемой, а дальнейшие расширения учитывают специфику конкретных реальных сетей.
 
 
 
 ### Список литературы
-
-### Bibliography
 
 **[1]** A.-L. Barabási and R. Albert. *Emergence of scaling in random networks.* **Science**, 286:509–512, 1999.
 
