--- a/NetworkScienceBarabasi/6.md
+++ b/NetworkScienceBarabasi/6.md
@@ -16,11 +16,11 @@
 
 | **Основные идеи / Термины**                 | **Подробные заметки**                                                                                                                                                                                                                                                                                |
 |:--------------------------------------------|:-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| **Фитнес (fitness)**                        | Величина \(\eta\), отражающая внутреннюю способность узла привлекать новые ссылки. Выше фитнес — выше скорость прироста степени (числа связей).                                                                                                                                                       |
-| **Обобщённая пристрастная привязка**       | \(\Pi_i \propto \eta_i k_i\). Узлы конкурируют за новые ссылки не только за счёт существующего числа связей \(k\), но и за счёт собственного фитнеса \(\eta\).                                                                                                                                       |
-| **Динамика степени**                        | Формула (6.3) и (6.4) показывают, что \(\displaystyle k_i(t)\sim t^{\beta(\eta_i)}\), где \(\beta(\eta) = \eta/C\). Таким образом, узел с большим \(\eta\) растёт быстрее и со временем обгоняет тех, кто пришёл раньше, но имеет меньший фитнес.                                                                                         |
-| **Распределение степеней**                 | Итоговое \(p(k)\) — это интеграл по всем фитнесам \(\rho(\eta)\). Для равномерного распределения \(\rho(\eta)\) в \([0,1]\) получается степенной закон с логарифмической поправкой, а степень распределения \(\gamma \approx 2.255\).                                                                                                   |
-| **Примеры измерения фитнеса**              | - WWW: экспериментально показано, что \(\rho(\eta)\) экспоненциально затухает, т.е. «супер-фитнес» узлы редки.  <br>- Наука: фитнес статей можно оценить по росту их цитирования во времени; оказывается, что небольшие различия в фитнесе приводят к колоссальным различиям в числе цитат (амплификация).                                |
+| **Фитнес (fitness)**                        | Величина $\eta$, отражающая внутреннюю способность узла привлекать новые ссылки. Выше фитнес — выше скорость прироста степени (числа связей).                                                                                                                                                       |
+| **Обобщённая пристрастная привязка**       | $\Pi_i \propto \eta_i k_i$. Узлы конкурируют за новые ссылки не только за счёт существующего числа связей $k$, но и за счёт собственного фитнеса $\eta$.                                                                                                                                       |
+| **Динамика степени**                        | Формула (6.3) и (6.4) показывают, что $\displaystyle k_i(t)\sim t^{\beta(\eta_i)}$, где $\beta(\eta) = \eta/C$. Таким образом, узел с большим $\eta$ растёт быстрее и со временем обгоняет тех, кто пришёл раньше, но имеет меньший фитнес.                                                                                         |
+| **Распределение степеней**                 | Итоговое $p(k)$ — это интеграл по всем фитнесам $\rho(\eta)$. Для равномерного распределения $\rho(\eta)$ в $[0,1]$ получается степенной закон с логарифмической поправкой, а степень распределения $\gamma \approx 2.255$.                                                                                                   |
+| **Примеры измерения фитнеса**              | - WWW: экспериментально показано, что $\rho(\eta)$ экспоненциально затухает, т.е. «супер-фитнес» узлы редки.  <br>- Наука: фитнес статей можно оценить по росту их цитирования во времени; оказывается, что небольшие различия в фитнесе приводят к колоссальным различиям в числе цитат (амплификация).                                |
 
 **Резюме секции 6.2**: Модель Бьянкони–Барабаши вводит фитнес, позволяя узлам с высокими внутренними характеристиками быстро обгонять «старые» хабы. Получившиеся распределения степеней и темпы роста лучше описывают наблюдаемые в реальности сети, где важны не только «дата рождения», но и «качество» узла.
 
@@ -30,10 +30,10 @@
 
 | **Основные идеи / Термины**                               | **Подробные заметки**                                                                                                                                                                                                                                                                                                                       |
 |:-----------------------------------------------------------|:----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| **Сложность прямого определения фитнеса**                 | Оценить \(\eta_i\) сложно, так как оно отражает «коллективное мнение» сети. Для одной и той же сущности разные люди дадут разную оценку.                                                                                                                                                                                                      |
-| **Методика оценки фитнеса**                               | Анализируется динамика \(k_i(t)\). Если \(\ln k_i(t)\) линеен от \(\ln t\) (с учётом сдвигов), то наклон даёт \(\beta(\eta_i)\), а через \(\beta(\eta_i)\) восстанавливают \(\eta_i\).                                                                                                                                                        |
-| **Фитнес на Вебе**                                        | Замеры показывают, что \(\rho(\eta)\) для документов в WWW экспоненциально затухает (Image 6.4). Хотя есть огромные различия в популярности сайтов, их фитнесы не так уж сильно отличаются: незначительные различия фитнеса могут быть усилены механикой предпочтительной привязки.                                                        |
-| **Фитнес в научных публикациях**                          | Существует модель цитирования \(\Pi_i \sim \eta_i c_i(t) P_i(t)\) с затуханием по времени. Фитнес статьи \(\eta_i\) (важность) определяет её «долгоживущую» цитируемость, а параметры \(\mu_i\) и \(\sigma_i\) — когда и как быстро статья выходит на «пик». Итоговая предсказанная формула (6.15) даёт «конечный» (ultimate) уровень цитирования. |
+| **Сложность прямого определения фитнеса**                 | Оценить $\eta_i$ сложно, так как оно отражает «коллективное мнение» сети. Для одной и той же сущности разные люди дадут разную оценку.                                                                                                                                                                                                      |
+| **Методика оценки фитнеса**                               | Анализируется динамика $k_i(t)$. Если $\ln k_i(t)$ линеен от $\ln t$ (с учётом сдвигов), то наклон даёт $\beta(\eta_i)$, а через $\beta(\eta_i)$ восстанавливают $\eta_i$.                                                                                                                                                        |
+| **Фитнес на Вебе**                                        | Замеры показывают, что $\rho(\eta)$ для документов в WWW экспоненциально затухает (Image 6.4). Хотя есть огромные различия в популярности сайтов, их фитнесы не так уж сильно отличаются: незначительные различия фитнеса могут быть усилены механикой предпочтительной привязки.                                                        |
+| **Фитнес в научных публикациях**                          | Существует модель цитирования $\Pi_i \sim \eta_i c_i(t) P_i(t)$ с затуханием по времени. Фитнес статьи $\eta_i$ (важность) определяет её «долгоживущую» цитируемость, а параметры $\mu_i$ и $\sigma_i$ — когда и как быстро статья выходит на «пик». Итоговая предсказанная формула (6.15) даёт «конечный» (ultimate) уровень цитирования. |
 
 **Резюме секции 6.3**: Фитнес можно «измерить», анализируя временные ряды роста степени (числа ссылок). В научных и веб-сетях фитнес оказывается экспоненциально распределён. Небольшие различия фитнеса сильно усиливаются процессом притяжения ссылок, что ведёт к большим различиям в размерах узлов.
 
@@ -44,11 +44,11 @@
 | **Основные идеи / Термины**                            | **Подробные заметки**                                                                                                                                                                                                                                                                             |
 |:--------------------------------------------------------|:--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
 | **Соответствие фитнес-модели и бозе-газа**             | Вводится аналогия «фитнес = энергия узла» (формула (6.16)), а ссылки интерпретируются как «частицы», занимающие энергетические уровни. Распределение узлов по степеням оказывается аналогичным статистике Бозе (Bose statistics).                                                                                                          |
-| **Две фазы**                                           | 1) **Scale-free**: большинство распределений фитнеса дают степенное распределение, где несколько узлов с высоким фитнесом становятся крупными хабами, но нет единоличного «победителя». <br>2) **Bose-Einstein Condensation**: при определённых \(\rho(\eta)\) один (или несколько) узлов-конденсатов захватывают конечную долю всех ссылок. |
-| **Условие конденсации**                                | Если \(\int \frac{\eta\rho(\eta)}{1 - \eta} d\eta < 1\), возникает «конденсат»: узел с наибольшим фитнесом притягивает «большинство» связей. Структура сети перестаёт быть степенной, превращаясь в «звездообразную» (hub-and-spoke).                                                                                                      |
-| **Пример**                                             | При \(\rho(\eta) = (1-\zeta)(1-\eta)^\zeta\) можно варьировать \(\zeta\). Для одних значений возникает скейл-фри фаза, для других — конденсация Бозе-Эйнштейна.                                                                                                                                    |
+| **Две фазы**                                           | 1) **Scale-free**: большинство распределений фитнеса дают степенное распределение, где несколько узлов с высоким фитнесом становятся крупными хабами, но нет единоличного «победителя». <br>2) **Bose-Einstein Condensation**: при определённых $\rho(\eta)$ один (или несколько) узлов-конденсатов захватывают конечную долю всех ссылок. |
+| **Условие конденсации**                                | Если $\int \frac{\eta\rho(\eta)}{1 - \eta} d\eta < 1$, возникает «конденсат»: узел с наибольшим фитнесом притягивает «большинство» связей. Структура сети перестаёт быть степенной, превращаясь в «звездообразную» (hub-and-spoke).                                                                                                      |
+| **Пример**                                             | При $\rho(\eta) = (1-\zeta)(1-\eta)^\zeta$ можно варьировать $\zeta$. Для одних значений возникает скейл-фри фаза, для других — конденсация Бозе-Эйнштейна.                                                                                                                                    |
 
-**Резюме секции 6.4**: Модель Бьянкони–Барабаши через отображение на бозе-газ показывает, что при некоторых фитнес-распределениях узел с максимальной \(\eta\) может «сконденсировать» львиную долю ссылок, создавая структуру «победитель забирает всё». Это фундаментально иное состояние по сравнению с «обычной» скейл-фри сетью.
+**Резюме секции 6.4**: Модель Бьянкони–Барабаши через отображение на бозе-газ показывает, что при некоторых фитнес-распределениях узел с максимальной $\eta$ может «сконденсировать» львиную долю ссылок, создавая структуру «победитель забирает всё». Это фундаментально иное состояние по сравнению с «обычной» скейл-фри сетью.
 
 ---
 
@@ -56,15 +56,15 @@
 
 | **Основные идеи / Термины**               | **Подробные заметки**                                                                                                                                                                                                                                                                                                                |
 |:------------------------------------------|:-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| **Ограничения модели Барабási–Альберт**  | 1) Предсказывает \(\gamma=3\), а в реальности \(\gamma \in [2,5]\). <br>2) Игнорирует поглощение/удаление узлов и ссылок, а также «внутренние» ссылки. <br>3) Допускает, что узлы без ссылок никогда не привлекут новые связи.                                                                                                     |
-| **Начальная привлекательность (A)**      | \(\Pi(k) \sim A + k\). Если \(A>0\), даже узлу с \(k=0\) есть шанс получить первую ссылку. Это: <br>– поднимает \(\gamma\) выше 3, делая сеть «гладче»; <br>– вносит сатурацию распределения на малых степенях \((k+A)^{-\gamma}\).                                                                                                     |
-| **Внутренние ссылки (internal links)**   | 1) «Двойная» пристрастная привязка (\(\Pi(k,k') \sim kk'\)) понижает \(\gamma\) к 2, т.к. усиливает рост хабов. <br>2) Случайные внутренние ссылки (не зависящие от \(k\)) повышают \(\gamma\) выше 3.                                                                                                                               |
-| **Удаление узлов (node deletion)**       | Если с некоторой скоростью \(r\) удаляются узлы: <br>– при \(r < 1\) сеть всё ещё растёт, \(\gamma\) выше 3; <br>– при \(r=1\) сеть перестаёт быть скейл-фри, распределение становится экспоненциальным; <br>– при \(r>1\) сеть убывает (telegraph-сеть, Гармент-дистрикт).                                                                       |
-| **Пример: Гармент-дистрикт**             | «Суперлинейная» привязка (\(\alpha>1\)), но при этом наблюдается «слабое отмирание» узлов с малыми степенями. Сеть сокращается, однако сохраняет скейл-фри вид.                                                                                                                                                                       |
-| **Ускоренный рост (accelerated growth)** | Если \(m(t) = m_0 t^\theta\), то \(\gamma\) растёт по формуле \(\gamma = \frac{3+2\theta}{1-\theta}\). При \(\theta=1\) сеть теряет скейл-фри характер.                                                                                                                                                                                |
-| **Старение (aging)**                     | Снижает вероятность присоединения новых связей со временем. Формально \(\Pi \sim k (t - t_i)^{-\nu}\). При \(\nu>0\) молодые узлы в приоритете; при \(\nu<0\) предпочтение старым. При достаточном росте \(\nu\) возможно исчезновение степенного распределения.                                                                                 |
+| **Ограничения модели Барабási–Альберт**  | 1) Предсказывает $\gamma=3$, а в реальности $\gamma \in [2,5]$. <br>2) Игнорирует поглощение/удаление узлов и ссылок, а также «внутренние» ссылки. <br>3) Допускает, что узлы без ссылок никогда не привлекут новые связи.                                                                                                     |
+| **Начальная привлекательность (A)**      | $\Pi(k) \sim A + k$. Если $A>0$, даже узлу с $k=0$ есть шанс получить первую ссылку. Это: <br>– поднимает $\gamma$ выше 3, делая сеть «гладче»; <br>– вносит сатурацию распределения на малых степенях $(k+A)^{-\gamma}$.                                                                                                     |
+| **Внутренние ссылки (internal links)**   | 1) «Двойная» пристрастная привязка ($\Pi(k,k') \sim kk'$) понижает $\gamma$ к 2, т.к. усиливает рост хабов. <br>2) Случайные внутренние ссылки (не зависящие от $k$) повышают $\gamma$ выше 3.                                                                                                                               |
+| **Удаление узлов (node deletion)**       | Если с некоторой скоростью $r$ удаляются узлы: <br>– при $r < 1$ сеть всё ещё растёт, $\gamma$ выше 3; <br>– при $r=1$ сеть перестаёт быть скейл-фри, распределение становится экспоненциальным; <br>– при $r>1$ сеть убывает (telegraph-сеть, Гармент-дистрикт).                                                                       |
+| **Пример: Гармент-дистрикт**             | «Суперлинейная» привязка ($\alpha>1$), но при этом наблюдается «слабое отмирание» узлов с малыми степенями. Сеть сокращается, однако сохраняет скейл-фри вид.                                                                                                                                                                       |
+| **Ускоренный рост (accelerated growth)** | Если $m(t) = m_0 t^\theta$, то $\gamma$ растёт по формуле $\gamma = \frac{3+2\theta}{1-\theta}$. При $\theta=1$ сеть теряет скейл-фри характер.                                                                                                                                                                                |
+| **Старение (aging)**                     | Снижает вероятность присоединения новых связей со временем. Формально $\Pi \sim k (t - t_i)^{-\nu}$. При $\nu>0$ молодые узлы в приоритете; при $\nu<0$ предпочтение старым. При достаточном росте $\nu$ возможно исчезновение степенного распределения.                                                                                 |
 
-**Резюме секции 6.5**: Реальные сети формируются множеством механизмов: начальная привлекательность, внутренние ссылки, удаление/старение узлов, ускоренный рост и т.д. Каждый процесс по-разному меняет \(\gamma\) и форму \(p(k)\). Обобщая, эволюционные модели дают гибкий инструментарий для описания разнообразных топологий.
+**Резюме секции 6.5**: Реальные сети формируются множеством механизмов: начальная привлекательность, внутренние ссылки, удаление/старение узлов, ускоренный рост и т.д. Каждый процесс по-разному меняет $\gamma$ и форму $p(k)$. Обобщая, эволюционные модели дают гибкий инструментарий для описания разнообразных топологий.
 
 ---
 
@@ -74,8 +74,8 @@
 |:----------------------------------------------|:--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
 | **Главная мысль**                             | Топология сети формируется её динамикой. Чтобы понять структуру, надо разобраться, как именно сеть эволюционирует.                                                                                                                                                       |
 | **Разнообразие распределений степеней**       | Мы можем наблюдать степенные, «растянутые экспоненты» (stretched exponential), логарифмические поправки, экспоненциальные срезы, пики и т.д. — результат «наложения» разных элементарных процессов (старение, фитнес, удаление узлов, внутренняя привязка и т.п.).                                             |
-| **Типы моделей**                              | 1) **Статические** (Эрдёш–Реньи, Уоттс–Строгатц): \(N\) фиксировано, распределение степеней экспоненциально ограничено. <br>2) **Генеративные** (Configuration model, скрытые параметры): «зашиваем» желаемое \(p(k)\). <br>3) **Эволюционные** (Барбаши–Альберт и расширения): модели процессов роста/прилипчивости. |
-| **Практическое значение**                     | - Статические модели — проверка на «чистую случайность».  <br>- Генеративные модели — изучение влияния заданного \(p(k)\) на устойчивость, распространение и прочие эффекты.  <br>- Эволюционные модели — понимание «почему» сеть такая, а не иная.                                                            |
+| **Типы моделей**                              | 1) **Статические** (Эрдёш–Реньи, Уоттс–Строгатц): $N$ фиксировано, распределение степеней экспоненциально ограничено. <br>2) **Генеративные** (Configuration model, скрытые параметры): «зашиваем» желаемое $p(k)$. <br>3) **Эволюционные** (Барбаши–Альберт и расширения): модели процессов роста/прилипчивости. |
+| **Практическое значение**                     | - Статические модели — проверка на «чистую случайность».  <br>- Генеративные модели — изучение влияния заданного $p(k)$ на устойчивость, распространение и прочие эффекты.  <br>- Эволюционные модели — понимание «почему» сеть такая, а не иная.                                                            |
 
 **Общий вывод**: Для детального понимания структуры реальных сетей нужны эволюционные модели, которые учитывают ключевые механизмы: фитнес, удаление/старение узлов, внутренние связи и т.д. Именно сочетание этих процессов даёт разнообразие наблюдаемых степенных и нестепенных распределений.
 
@@ -84,18 +84,18 @@
 ## ДОМАШНЕЕ ЗАДАНИЕ (краткий обзор)
 
 1. **Ускоренный рост в направленной модели**  
-   Показать, как \(\theta\) влияет на степень и вычислить итоговую \(\gamma\) в ориентированной версии модели Барбаши–Альберт при \(m(t)=t^\Theta\).
+   Показать, как $\theta$ влияет на степень и вычислить итоговую $\gamma$ в ориентированной версии модели Барбаши–Альберт при $m(t)=t^\Theta$.
 
 2. **t-party Evolving Network Model**  
-   - Вывести закон роста \(\displaystyle k_i(t)\) для узла с привлекательностью \(\eta_i\).  
-   - Найти итоговое распределение степеней \(p(k|\eta)\).  
-   - Рассмотреть случай с двумя типами узлов \(\eta=2\) и \(\eta=1\) и вывести итоговое \(p(k)\).
+   - Вывести закон роста $\displaystyle k_i(t)$ для узла с привлекательностью $\eta_i$.  
+   - Найти итоговое распределение степеней $p(k|\eta)$.  
+   - Рассмотреть случай с двумя типами узлов $\eta=2$ и $\eta=1$ и вывести итоговое $p(k)$.
 
 3. **Модель Бьянкони–Барабаши с двумя фитнесами**  
-   - Пусть \(\rho(\eta)=\tfrac12\delta(\eta-a)+\tfrac12\delta(\eta-1),\ 0\le a\le1\). Найти \(\gamma\) и стационарное распределение степеней.  
+   - Пусть $\rho(\eta)=\tfrac12\delta(\eta-a)+\tfrac12\delta(\eta-1),\ 0\le a\le1$. Найти $\gamma$ и стационарное распределение степеней.  
 
 4. **Аддитивный фитнес**  
-   - При \(\Pi(k_i)\sim \eta_i + k_i\) (и \(\eta_i\) распределённой по \(\rho(\eta)\)), вывести, каково будет \(p(k)\).  
+   - При $\Pi(k_i)\sim \eta_i + k_i$ (и $\eta_i$ распределённой по $\rho(\eta)$), вывести, каково будет $p(k)$.  
 
 ---
 
@@ -104,7 +104,6 @@
 В главе 6 рассматривается, как различные дополнительные механизмы (фитнес, внутренние ссылки, удаление и старение узлов, ускоренный рост) модифицируют классическую модель Барабási–Альберт. Эти факторы объясняют наблюдаемые отклонения от «чистой» степенной формы в реальных сетях и позволяют предсказывать эволюцию и конечную структуру широкого круга сетевых систем.
 
 ### Список литературы
-# Bibliography
 
 1. A.L. Barabási. *Linked: The New Science of Networks*. Perseus, Boston, 2001.
 
