--- a/NetworkScienceBarabasi/7.md
+++ b/NetworkScienceBarabasi/7.md
@@ -21,7 +21,7 @@
 
 > #### *Введение: «Знаменитости женятся на знаменитостях?»*
 > - Пример голливудских пар (Джоли–Питт, Форд–Флокхарт и т.д.) иллюстрирует идею, что «звёзды» (узлы с высокой степенью) склонны соединяться между собой.  
-> - В случайной модели вероятность двух селебрити (из 1\,000) встретиться среди 10^8 людей мизерна (\(10^{-5}\)), то есть «хабы» не должны были бы «жениться» друг на друге, если бы всё происходило случайно.  
+> - В случайной модели вероятность двух селебрити (из 1\,000) встретиться среди 10^8 людей мизерна $(10^{-5}$), то есть «хабы» не должны были бы «жениться» друг на друге, если бы всё происходило случайно.  
 > - Однако в реальных социальных сетях мы видим противоположное: **звёзды встречаются со звёздами**, отражая **ассоциативность** в соцсетях.
 
 > #### *Hubs Avoiding Hubs: пример биологических сетей*
@@ -33,26 +33,26 @@
 > - **Disassortative Networks (дизассоциативные)**: хабы преимущественно соединяются с узлами малой степени.  
 > - **Neutral Networks (нейтральные)**: связи формируются случайно, без систематического смещения; хабы связаны с другими узлами пропорционально вероятности, ожидаемой в случайной модели.
 
-> #### *Degree Correlation Matrix \(e_{ij}\)*
-> - Матрица \(e_{ij}\) показывает вероятность того, что случайное ребро соединяет узлы со степенями \(i\) и \(j\).  
-> - Отклонение от случайного ожидания \(e_{ij} \neq q_i q_j\) указывает на наличие корреляций.
+> #### *Degree Correlation Matrix $e_{ij}$*
+> - Матрица $e_{ij}$ показывает вероятность того, что случайное ребро соединяет узлы со степенями $i$ и $j$.  
+> - Отклонение от случайного ожидания $e_{ij} \neq q_i q_j$ указывает на наличие корреляций.
 
-> #### *Функция \(k_{nn}(k)\) (Degree Correlation Function)*
-> - \(k_{nn}(k)\) — средняя степень ближайших соседей узлов со степенью \(k\).  
-> - **Если \(k_{nn}(k)\) растёт с \(k\)**, сеть ассоциативна (соцсети).  
-> - **Если \(k_{nn}(k)\) убывает**, сеть дизассоциативна (PPI, метаболические сети).  
-> - **Если \(k_{nn}(k)\) ≈ const**, сеть нейтральна (электрические сети, случайная генерация).
+> #### *Функция $k_{nn}(k)$ (Degree Correlation Function)*
+> - $k_{nn}(k)$ — средняя степень ближайших соседей узлов со степенью $k$.  
+> - **Если $k_{nn}(k)$ растёт с $k$**, сеть ассоциативна (соцсети).  
+> - **Если $k_{nn}(k)$ убывает**, сеть дизассоциативна (PPI, метаболические сети).  
+> - **Если $k_{nn}(k)$ ≈ const**, сеть нейтральна (электрические сети, случайная генерация).
 
-> #### *Коэффициент корреляции степеней \(r\)*
+> #### *Коэффициент корреляции степеней $r$*
 > - Предложен Марком Ньюманом.  
 > - Является **коэффициентом Пирсона** между степенями узлов, связанных ребром.  
-> - \(r > 0 \) — ассоциативность, \(r = 0\) — нейтральность, \(r < 0\) — дизассоциативность.  
-> - **Ограничение**: предполагает линейную зависимость \(k_{nn}(k)\) от \(k\), что не всегда точно.
+> - $r > 0 $ — ассоциативность, $r = 0$ — нейтральность, $r < 0$ — дизассоциативность.  
+> - **Ограничение**: предполагает линейную зависимость $k_{nn}(k)$ от $k$, что не всегда точно.
 
-> #### *Структурная отсечка (\(k_s\))*
-> - В простых сетях (без мультирёбер) для масштабных сетей (\(\gamma < 3\)) возникает конфликт: при больших степенях узлы «должны» иметь несколько рёбер между собой (чтобы быть нейтральными), но это запрещено форматом «simple graph».  
+> #### *Структурная отсечка $(k_s$)*
+> - В простых сетях (без мультирёбер) для масштабных сетей $$gamma < 3$) возникает конфликт: при больших степенях узлы «должны» иметь несколько рёбер между собой (чтобы быть нейтральными), но это запрещено форматом «simple graph».  
 > - В итоге появляется **дизассоциативность** «по умолчанию» (structural disassortativity).  
-> - Формула отсечки: \( k_s(N) \sim \sqrt{\langle k \rangle N} \). Узлы с \(k > k_s\) не могут полностью реализовать «случайные» связи друг с другом, что порождает искусственную дизассоциативность.
+> - Формула отсечки: $ k_s(N) \sim \sqrt{\langle k \rangle N} $. Узлы с $k > k_s$ не могут полностью реализовать «случайные» связи друг с другом, что порождает искусственную дизассоциативность.
 
 > #### *Корреляции в реальных сетях (из десяти референсных примеров)*
 > - **Социальные сети** (звонки, коллаборации учёных, актёрская сеть): ассоциативность.  
@@ -60,10 +60,10 @@
 > - **Power Grid**: нейтральна.  
 > - **WWW**: дизассоциативность частично объясняется структурным эффектом.  
 > - **Internet**: ассоциативность для узлов малой степени, но при больших степенях эффект гасится.  
-> - **Цитирования**: смешанная картина (для малых \(k\) — ассоциативность, для больших — дизассоциативность).
+> - **Цитирования**: смешанная картина (для малых $k$ — ассоциативность, для больших — дизассоциативность).
 
 > #### *Почему это важно? (Влияние корреляций)*
-> - **Размер гигантской компоненты**: при ассоциативности гигантская компонента появляется при меньшем \(\langle k\rangle\), но её абсолютный размер при больших \(\langle k\rangle\) меньше, чем в дизассоциативных сетях.  
+> - **Размер гигантской компоненты**: при ассоциативности гигантская компонента появляется при меньшем \$langle k\rangle$, но её абсолютный размер при больших \$langle k\rangle$ меньше, чем в дизассоциативных сетях.  
 > - **Распространение эпидемий**: в ассоциативных сетях хабы образуют «ядро», поддерживающее эпидемию.  
 > - **Устойчивость к отказам**: в дизассоциативных сетях удаление хаба выбивает много «лучей», в ассоциативных — часть хабов связана друг с другом и более «избыточна».  
 > - **Расстояния и диаметр**: ассоциативные сети могут иметь меньшую среднюю длину пути, но больший диаметр из-за длинных цепочек малостепенных узлов.  
@@ -71,13 +71,13 @@
 
 > #### *Модели и алгоритмы генерации скоррелированных сетей*
 > - **Конфигурационная модель**: нейтральна, если разрешить мультирёбра; дизассоциативна (структурно), если мультирёбра не разрешены.  
-> - **Модель роста Барабаши-Альберт**: нейтральна. При «начальной привлекательности» \(A>0\) возможна слабая ассоциативность, при \(A<0\) — дизассоциативность.  
+> - **Модель роста Барабаши-Альберт**: нейтральна. При «начальной привлекательности» $A>0$ возможна слабая ассоциативность, при $A<0$ — дизассоциативность.  
 > - **Алгоритм Xulvi-Brunet & Sokolov**: позволяет «перестраивать» сеть, добиваясь максимальной/настраиваемой корреляции (ассоциативности или дизассоциативности).  
-> - При масштабно-инваринтном законе распределения степеней (\(\gamma<3\)) проявляется структурная дизассоциативность, которую можно убрать либо разрешив мультирёбра, либо урезав высокостепенные узлы (\(k>k_s\)).
+> - При масштабно-инваринтном законе распределения степеней $$gamma<3$) проявляется структурная дизассоциативность, которую можно убрать либо разрешив мультирёбра, либо урезав высокостепенные узлы $(k>k_s$).
 
 > #### *Ограничения и перспективы*
-> - Самый точный «портрет» корреляций даёт матрица \( e_{ij} \), однако прямое задание произвольной \( e_{ij} \) при генерации сетей — сложная задача.  
-> - **r** и \(\mu\) обычно совпадают по знаку, но количественно могут дать разные оценки. Для крупных сетей \( r \) может идти к нулю, даже если сеть остаётся скоррелированной.  
+> - Самый точный «портрет» корреляций даёт матрица $ e_{ij} $, однако прямое задание произвольной $ e_{ij} $ при генерации сетей — сложная задача.  
+> - **r** и \$mu$ обычно совпадают по знаку, но количественно могут дать разные оценки. Для крупных сетей $ r $ может идти к нулю, даже если сеть остаётся скоррелированной.  
 > - В реальных сетях встречаются также **более высокие корреляции** (трёх- и четырёхточечные), их влияние изучено меньше.  
 > - Социальная природа (гомофилия, профессиональные сообщества, механизмы «сводительства» хабов) объясняет ассоциативность соцсетей.
 
@@ -87,8 +87,8 @@
 
 1. **Корреляции степеней** — это систематические отклонения в связях между узлами разной степени.  
 2. **Ассоциативность**: хабы соединяются с хабами (соцсети); **дизассоциативность**: хабы соединяются со слабо степенными узлами (биосети).  
-3. **Матрица \(e_{ij}\) и функция \(k_{nn}(k)\)** отражают наличие/отсутствие корреляций; коэффициент \(r\) — удобная, но упрощённая метрика.  
-4. **Структурная отсечка** (\(k_s\)) порождает «автоматическую» дизассоциативность в простых масштабо-инвариантных сетях (\(\gamma<3\)).  
+3. **Матрица $e_{ij}$ и функция $k_{nn}(k)$** отражают наличие/отсутствие корреляций; коэффициент $r$ — удобная, но упрощённая метрика.  
+4. **Структурная отсечка** $(k_s$) порождает «автоматическую» дизассоциативность в простых масштабо-инвариантных сетях $gamma<3$.  
 5. **Корреляции** заметно меняют формирование гигантской компоненты, эпидемиологические процессы, устойчивость и другие сетевые свойства.  
 6. Большинство реальных сетей **не нейтральны**; соцсети — ассоциативны, а многие техно- и биосети — дизассоциативны.
 
