--- a/NetworkScienceBarabasi/8.md
+++ b/NetworkScienceBarabasi/8.md
@@ -19,9 +19,9 @@
 | **Ключевые вопросы / сигналы**                               | **Заметки**                                                                                                                                   |
 |--------------------------------------------------------------|-----------------------------------------------------------------------------------------------------------------------------------------------|
 | **Что такое перколяция?**                                    | Раздел статистической физики и математики, изучающий формирование “сквозных кластеров” при постепенном добавлении/удалении узлов (или ребер). |
-| **Ключевые понятия перколяции**                              | 1) Средний размер кластера \(\langle s \rangle\); 2) Параметр порядка \(P_{\infty}\); 3) Корреляционная длина \(\xi\). Все они демонстрируют фазовый переход при достижении критического порога \(p_c\). |
-| **Инвертированная перколяция (удаление узлов)**              | Аналогичный подход, но рассматривается процесс **удаления** узлов. При достижении критического значения \(f_c\) сеть фрагментируется.         |
-| **Критический порог \(f_c\)**                                | Доля узлов, удаление которых разрывает гигантскую компоненту. Для случайных сетей \(f_c\) всегда конечен, а для некоторых масштабных сетей \(f_c = 1\). |
+| **Ключевые понятия перколяции**                              | 1) Средний размер кластера $\langle s \rangle$; 2) Параметр порядка $P_{\infty}$; 3) Корреляционная длина $\xi$. Все они демонстрируют фазовый переход при достижении критического порога $p_c$. |
+| **Инвертированная перколяция (удаление узлов)**              | Аналогичный подход, но рассматривается процесс **удаления** узлов. При достижении критического значения $f_c$ сеть фрагментируется.         |
+| **Критический порог $f_c$**                                | Доля узлов, удаление которых разрывает гигантскую компоненту. Для случайных сетей $f_c$ всегда конечен, а для некоторых масштабных сетей $f_c = 1$. |
 
 ---
 
@@ -29,9 +29,9 @@
 
 | **Ключевые вопросы / сигналы**                      | **Заметки**                                                                                                                                     |
 |-----------------------------------------------------|-------------------------------------------------------------------------------------------------------------------------------------------------|
-| **Поведение Интернет под случайными отказами**      | Интернет (масштабная сеть) не разваливается даже при удалении значительной доли узлов; гигантская компонента сохраняется вплоть до \(f \approx 1\). |
+| **Поведение Интернет под случайными отказами**      | Интернет (масштабная сеть) не разваливается даже при удалении значительной доли узлов; гигантская компонента сохраняется вплоть до $f \approx 1$. |
 | **Почему возникает повышенная устойчивость?**       | В scale-free сетях множество узлов с малыми степенями и относительно мало хабов. При **случайном** удалении скорее выпадут «мелкие» узлы, не влияющие критически на связанность. |
-| **Критический порог для scale-free**                | Формула Моллоя–Рида и расчеты второго момента степени (\(\langle k^2 \rangle\)) показывают, что для \(\gamma < 3\) порог \(f_c\) стремится к 1 при \(N \to \infty\). |
+| **Критический порог для scale-free**                | Формула Моллоя–Рида и расчеты второго момента степени ($\langle k^2 \rangle$) показывают, что для $\gamma < 3$ порог $f_c$ стремится к 1 при $N \to \infty$. |
 | **Итог:**                                           | Масштабно-инвариантные сети крайне устойчивы к случайным отказам, но уязвимы к целенаправленным атакам.                                          |
 
 ---
@@ -41,7 +41,7 @@
 | **Ключевые вопросы / сигналы**                         | **Заметки**                                                                                                                                                         |
 |--------------------------------------------------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------------|
 | **Чем атака отличается от случайного удаления?**       | При атаке в первую очередь удаляются узлы с наибольшей степенью (хабы). Это резко уменьшает размер гигантской компоненты — сеть быстро фрагментируется.             |
-| **Критический порог при атаке**                        | В отличие от случайного удаления, у scale-free сети \(f_c\) в случае атаки гораздо меньше 1. Удалив относительно небольшое число хабов, можно разрушить сеть.      |
+| **Критический порог при атаке**                        | В отличие от случайного удаления, у scale-free сети $f_c$ в случае атаки гораздо меньше 1. Удалив относительно небольшое число хабов, можно разрушить сеть.      |
 | **Пример с аэропортами**                               | Закрытие главных узлов (крупных аэропортов) сильнее нарушит воздушное сообщение, чем закрытие большого числа мелких аэропортов.                                     |
 | **Вывод:**                                             | Масштабно-инвариантные сети — **робастны к случайным сбоям**, но имеют «Ахиллесову пяту», будучи **уязвимы к целенаправленным атакам** на хабы.                     |
 
@@ -53,7 +53,7 @@
 |-------------------------------------------------------------|----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
 | **Что такое каскадные сбои?**                               | Состояние, когда локальная поломка (узел/ребро) ведет к перегрузке соседей, вызывая новые сбои, которые могут «цепной реакцией» пройти по всей сети.                                        |
 | **Примеры**                                                 | 1) Энергосистема (аварии, ведущие к блэкаутам); 2) Интернет (перенаправление трафика вызывает сбои на соседних маршрутизаторах); 3) Финансовый кризис (банкротство одного банка тянет других). |
-| **Распределение размеров каскадов**                         | Часто подчиняется степенному закону \(p(s) \sim s^{-\alpha}\). Наблюдается «парадокс» малых и редких крупных событий: большинство сбоев невелики, но возможны колоссальные «черные лебеди».     |
+| **Распределение размеров каскадов**                         | Часто подчиняется степенному закону $p(s) \sim s^{-\alpha}$. Наблюдается «парадокс» малых и редких крупных событий: большинство сбоев невелики, но возможны колоссальные «черные лебеди».     |
 | **Модели**                                                 | 1) Модель распространения отказов (threshold model); 2) Ветвящаяся модель (branching) и другие. Все демонстрируют фазовые переходы и степенные законы размеров каскадов.                      |
 
 ---
@@ -63,7 +63,7 @@
 | **Ключевые вопросы / сигналы**                                 | **Заметки**                                                                                                                                                                                                 |
 |----------------------------------------------------------------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
 | **Можно ли усилить устойчивость сети?**                        | Используют методы оптимизации топологии (бимодальное распределение степеней) или стратегии подавления каскадов.                                                                                             |
-| **Оптимальные сети для защиты от сбоев и атак**                | При фиксированном числе ссылок лучшим решением оказывается бимодальное распределение (один сверхузел + узлы, имеющие одинаковую степень \(k_{\min}\)). Это компромисс между устойчивостью к атакам и к случайным сбоям. |
+| **Оптимальные сети для защиты от сбоев и атак**                | При фиксированном числе ссылок лучшим решением оказывается бимодальное распределение (один сверхузел + узлы, имеющие одинаковую степень $k_{\min}$). Это компромисс между устойчивостью к атакам и к случайным сбоям. |
 | **Прерывание каскадов**                                        | Иногда целесообразно **искусственно** отключить некоторые элементы, чтобы не дать сбою распространиться дальше (аналог выжигания леса во время пожара).                                                    |
 | **Сетевые инфраструктуры (Интернет, энергосети)**              | Полный «редизайн» маловероятен из-за громадных вложений и многолетнего роста систем. Но понимание ключевых уязвимостей помогает повышать их надежность и оперативно реагировать на сбои.                    |
 
