--- a/NetworkScienceBarabasi/9.md
+++ b/NetworkScienceBarabasi/9.md
@@ -25,13 +25,13 @@
 
 ### 2. Фундаментальные гипотезы сообщества
 1. **H1: Фундаментальная гипотеза**  
-   - Считается, что истинная структура сообществ «зашита» в матрицу смежности \( A_{ij} \). Нужно лишь её «правильно» извлечь.
+   - Считается, что истинная структура сообществ «зашита» в матрицу смежности $ A_{ij} $. Нужно лишь её «правильно» извлечь.
 2. **H2: Связность и плотность**  
    - Сообщество — это локально плотный и связный подграф. Узлы внутри сообщества соединены плотнее, чем с узлами вне сообщества.  
 3. **H3: Случайная гипотеза**  
    - В случайной сети чёткого разделения на сообщества быть не должно.  
 4. **H4: Гипотеза максимальной модульности**  
-   - Лучшая разбивка сети на сообщества соответствует максимальному значению модульности \( M \).
+   - Лучшая разбивка сети на сообщества соответствует максимальному значению модульности $ M $.
 
 ### 3. Количество сообществ и сложность задачи
 - **Число всех возможных разбиений** растёт сверхэкспоненциально: метод перебора «в лоб» (brute force) вычислительно невозможен даже для относительно небольших сетей.  
@@ -41,35 +41,35 @@
 
 #### 4.1 Иерархическая кластеризация
 - **Агломеративный (пример – алгоритм Равас** (Ravasz)):
-  1. Задаём меру сходства \((x_{ij})\), отражающую близость узлов (например, топологическое перекрытие).
+  1. Задаём меру сходства $(x_{ij})$, отражающую близость узлов (например, топологическое перекрытие).
   2. Последовательно «сливаем» самые близкие узлы/кластеры.  
   3. Результат записывается в виде **дендрограммы**. Место «среза» дендрограммы даёт конечное разбиение.
-  - Сложность: \(O(N^2)\).  
+  - Сложность: $O(N^2)$.  
 - **Дизъюнктивный (пример – алгоритм Гирвана–Ньюмана**):
   1. Используется мера «центральности» (например, промежуточность рёбер – betweenness).
   2. Поочередно удаляем рёбра с наибольшей центральностью, пересчитывая её после каждого удаления.
   3. Получаем серию сообществ, которые можно визуализировать дендрограммой.
-  - Сложность: около \(O(N^3)\) для разреженных сетей.
+  - Сложность: около $O(N^3)$ для разреженных сетей.
 
 #### 4.2 Модульность и её максимизация
-- **Модульность \(M\)**:
+- **Модульность $M$**:
   \[
     M = \sum_{c=1}^{n_c} 
     \Bigl[\frac{L_c}{L} - \Bigl(\frac{k_c}{2L}\Bigr)^2 \Bigr],
   \]
-  где \(L_c\) – число рёбер внутри сообщества \(c\), \(k_c\) – сумма степеней его узлов, \(L\) – общее число рёбер в сети.  
+  где $L_c$ – число рёбер внутри сообщества $c$, $k_c$ – сумма степеней его узлов, $L$ – общее число рёбер в сети.  
 - **Алгоритмы на основе модульности**:
   - **Greedy-алгоритм Ньюмана**: жадно сливает пары сообществ, пока это улучшает модульность.  
-  - **Метод Лу-вена (Louvain)**: более быстрая оптимизация модульности, сложность порядка \(O(L)\). Один из самых популярных для крупных сетей.
+  - **Метод Лу-вена (Louvain)**: более быстрая оптимизация модульности, сложность порядка $O(L)$. Один из самых популярных для крупных сетей.
   - **Ограничения модульности**:  
     - Эффект «разрешающей способности» (Resolution limit) — небольшие сообщества могут искусственно объединяться в более крупные.  
-    - «Плато модульности» — часто большое количество разбиений даёт близкие значения \( M \), и нет единственной глобальной вершины.
+    - «Плато модульности» — часто большое количество разбиений даёт близкие значения $ M $, и нет единственной глобальной вершины.
 
 #### 4.3 Перекрывающиеся сообщества
 - **Мотив**: один узел может принадлежать нескольким группам (например, человек участвует в разных социальных кругах).  
 - **Алгоритм кликового перколяционного анализа (CFinder)**:  
-  - Рассматриваются все \(k\)-клики, которые считаются смежными, если они делят \(k-1\) узлов.  
-  - Каждая «перколяционная» компонента \(k\)-клик задаёт сообщество, и узлы могут входить в несколько сообществ.
+  - Рассматриваются все $k$-клики, которые считаются смежными, если они делят $k-1$ узлов.  
+  - Каждая «перколяционная» компонента $k$-клик задаёт сообщество, и узлы могут входить в несколько сообществ.
   - Сложность растёт экспоненциально, но эффективно на умеренных размерах.
 - **Link Clustering**:  
   - Кластеризуются не узлы, а **рёбра** (на основе похожести их «окружения»).
@@ -77,12 +77,12 @@
 
 ### 5. Оценка качества и скорости алгоритмов
 - **Бенчмарки**:
-  1. **Girvan-Newman (GN)**: 128 узлов, 4 сообщества по 32. Управляем параметром \(\mu\), определяющим плотность связей внутри/между сообществами.
+  1. **Girvan-Newman (GN)**: 128 узлов, 4 сообщества по 32. Управляем параметром $\mu$, определяющим плотность связей внутри/между сообществами.
   2. **LFR**: учитывает степенной закон распределения степеней и размеров сообществ (более реалистичен).  
-- **Нормированная взаимная информация** \((I_n)\) – мера сходства «истинного» разбиения и разбиения алгоритма.  
+- **Нормированная взаимная информация** $(I_n)$ – мера сходства «истинного» разбиения и разбиения алгоритма.  
 - **Скорость**:  
-  - Метод Лу-вена и Infomap (\(O(N \log N)\) или \(O(L)\)) — самые масштабируемые.  
-  - Гирван–Ньюман (\(O(N^3)\)) — самый медленный.
+  - Метод Лу-вена и Infomap ($O(N \log N)$ или $O(L)$) — самые масштабируемые.  
+  - Гирван–Ньюман ($O(N^3)$) — самый медленный.
 
 ### 6. Свойства сообществ
 - **Распределение размеров** часто следует степенному (много малых + несколько крупных).  
@@ -103,7 +103,6 @@
 Сообщества в сетях — это плотные группы узлов, более связанных друг с другом, чем с остальными. Для их выявления используется ряд гипотез (связность, плотность, максимальная модульность и т.д.) и множество алгоритмов (иерархическая кластеризация, модульность, алгоритмы перекрывающихся сообществ), каждый из которых имеет свои преимущества, недостатки и вычислительную сложность. Основные вызовы — экспоненциально большое количество возможных разбиений, неоднозначность (плато модульности), а также наличие в реальных системах перекрывающихся сообществ и весовых связей разной природы. На практике сообщества важны для понимания социальной структуры, биологических процессов, оптимизации транспортных/коммуникационных систем и других прикладных задач.
 
 # Список литературы
-# Bibliography
 
 1. B. Droitcour. Young Incorporated Artists. *Art in America*, 92-97, April 2014.  
 2. V. D. Blondel, J.-L. Guillaume, R. Lambiotte, and E. Lefebvre. Fast unfolding of communities in large networks. *J. Stat. Mech.*, 2008.  
